--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -317,3 +317,29 @@ svg {
 .sliderInner > .divSliders {
     min-width: 100%; /* Cada slide ocupa el 100% del ancho del carrusel */
 }
+
+.slide1,
+.slide3 {
+    clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%);
+    /* 
+        00 20%: Esquina superior izquierda
+        100% 0: Esquina superior derecha
+        100% 100%: Punto central del lado derecho
+        0 100%: Esquina inferior izquierda 
+    */
+}
+.slide2 {
+    clip-path: polygon(0 0%, 100% 20%, 100% 100%, 0 100%);
+}
+
+.divSliders {
+    background: linear-gradient(135deg, #c058dd, #f33095, #8b5cf6, #8b5cf6);
+    animation: bg 5s linear infinite;
+
+    width: 100%;
+}
+@keyframes bg {
+    100% {
+        filter: hue-rotate(360deg);
+    }
+}
