--- a/src/output.css
+++ b/src/output.css
@@ -942,6 +942,10 @@ video {
   height: 200px;
 }
 
+.h-60 {
+  height: 15rem;
+}
+
 .h-\[100vh\] {
   height: 100vh;
 }
@@ -964,6 +968,18 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-100 {
+  height: 400px;
+}
+
+.h-200 {
+  height: 800px;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .w-10 {
@@ -2384,16 +2400,16 @@ video {
     height: 5rem;
   }
 
+  .tabletXL\:w-1\/2 {
+    width: 50%;
+  }
+
   .tabletXL\:w-125 {
     width: 500px;
   }
 
   .tabletXL\:w-full {
     width: 100%;
-  }
-
-  .tabletXL\:w-1\/2 {
-    width: 50%;
   }
 
   .tabletXL\:bg-\[\#fff\] {
