--- a/src/output.css
+++ b/src/output.css
@@ -934,12 +934,12 @@ video {
   height: 10rem;
 }
 
-.h-50 {
-  height: 200px;
-}
-
 .h-60 {
   height: 15rem;
+}
+
+.h-72 {
+  height: 18rem;
 }
 
 .h-\[100vh\] {
@@ -1010,10 +1010,6 @@ video {
   width: 100%;
 }
 
-.w-screen {
-  width: 100vw;
-}
-
 .grow {
   flex-grow: 1;
 }
@@ -1028,6 +1024,16 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes bg {
+  100% {
+    filter: hue-rotate(360deg);
+  }
+}
+
+.animate-bg {
+  animation: bg 5s linear infinite;
 }
 
 .cursor-pointer {
@@ -1311,6 +1317,10 @@ video {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
 .from-pink-500 {
   --tw-gradient-from: #ec4899 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(236 72 153 / 0) var(--tw-gradient-to-position);
@@ -1323,12 +1333,37 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-\[\#c058dd\] {
+  --tw-gradient-from: #c058dd var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(192 88 221 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#8b5cf6\] {
+  --tw-gradient-from: #8b5cf6 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(139 92 246 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-\[\#f33095\] {
+  --tw-gradient-to: rgb(243 48 149 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #f33095 var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
 .to-pink-500 {
   --tw-gradient-to: #ec4899 var(--tw-gradient-to-position);
 }
 
 .to-violet-500 {
   --tw-gradient-to: #8b5cf6 var(--tw-gradient-to-position);
+}
+
+.to-\[\#8b5cf6\] {
+  --tw-gradient-to: #8b5cf6 var(--tw-gradient-to-position);
+}
+
+.to-\[\#c058dd\] {
+  --tw-gradient-to: #c058dd var(--tw-gradient-to-position);
 }
 
 .bg-cover {
@@ -1431,6 +1466,10 @@ video {
   padding-left: 1.75rem;
 }
 
+.pt-0 {
+  padding-top: 0px;
+}
+
 .pt-10 {
   padding-top: 2.5rem;
 }
@@ -1439,8 +1478,8 @@ video {
   padding-top: 0.5rem;
 }
 
-.pt-20 {
-  padding-top: 5rem;
+.pt-24 {
+  padding-top: 6rem;
 }
 
 .text-center {
@@ -1549,6 +1588,16 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-slate-700 {
+  --tw-text-opacity: 1;
+  color: rgb(51 65 85 / var(--tw-text-opacity));
+}
+
+.text-slate-900 {
+  --tw-text-opacity: 1;
+  color: rgb(15 23 42 / var(--tw-text-opacity));
 }
 
 .opacity-100 {
@@ -2490,6 +2539,14 @@ video {
 
   .fhd\:font-semibold {
     font-weight: 600;
+  }
+
+  .fhd\:font-extrabold {
+    font-weight: 800;
+  }
+
+  .fhd\:font-bold {
+    font-weight: 700;
   }
 }
 
