--- a/src/css/prueba.css
+++ b/src/css/prueba.css
@@ -1,149 +1,58 @@
-/* button {
-    height: 40px;
-    width: 80px;
-}
-header {
-    background-color: #2a3a47;
-    height: 80px;
-}
-.modal::backdrop {
-    backdrop-filter: blur(5px);
-    height: 100%;
-    width: 100%;
-    margin-top: 0px;
-    background-color: rgba(51, 48, 48, 0.5);
-    height: 100%;
-}
-.modal {
-    height: 100%;
-    width: 100%;
-    background-color: rgb(253, 247, 247, 0);
-    opacity: 1;
-    list-style-type: none;
-    text-align: center;
-    color: #75a8d1;
-}
-.modal a {
-    outline: none;
-} */
-
-/* From Uiverse.io by prakashdc */
-/* .hamburger { */
-/* padding-top: 80px; */
-/* cursor: pointer; */
-/* } */
-
-/* .hamburger input {
-    display: none;
-} */
-
-/* .hamburger svg { */
-/* The size of the SVG defines the overall size */
-/* height: 3em; */
-/* Define the transition for transforming the SVG */
-/* transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1); */
-/* } */
-
-/* .line { */
-/* fill: none; */
-/* stroke: #fff; */
-/* stroke-linecap: round; */
-/* stroke-linejoin: round; */
-/* stroke-width: 3; */
-/* transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1); */
-/* } */
-
-/* .line-top-bottom { */
-/* stroke-dasharray: 12 63; */
-/* } */
-
-/* .hamburger input:hover + svg {
-    transform: rotate(-45deg);
-}
-
-.hamburger input:hover + svg .line-top-bottom {
-    stroke-dasharray: 20 300;
-    stroke-dashoffset: -32.42;
-} */
-
-body {
-    padding: 0;
+/* * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace;
 }
-button {
-    height: 40px;
-    width: 80px;
-    /* margin: 0 0 0 2px; */
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
+    background: linear-gradient(315deg, #fff, #d7e1ec 75%);
 }
-header {
-    background-color: #2a3a47;
-    height: 80px;
+
+.contenedor .boton {
+    display: inline-block;
+    height: 60px;
+    width: 60px;
+    margin: 0 5px;
+    overflow: hidden;
+    background: #fff;
+    border-radius: 50px;
+    cursor: pointer;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    transition: all 0.6s ease-out;
 }
-/* .modal::backdrop {
-    backdrop-filter: blur(5px);
-    height: 100vh;
-    margin-top: 0px;
-    background-color: rgba(51, 48, 48, 0.502);
+.contenedor .boton:hover {
+    width: 200px;
+    background: #d7e1ec;
 }
-.modal {
-    background-color: rgba(253, 247, 247, 0);
-    opacity: 1;
-    list-style-type: none;
+.contenedor .boton .icono {
+    display: inline-block;
+    height: 60px;
+    width: 60px;
+    border-radius: 50px;
+    box-sizing: border-box;
+    line-height: 60px;
     text-align: center;
-    color: #75a8d1;
+    transition: all 0.6s ease-out;
 } */
 
-/* From Uiverse.io by prakashdc */
-.hamburger {
-    padding-top: 80px;
-    cursor: pointer;
+/* .contenedor .boton i {
+    font-size: 25px;
+    line-height: 60px;
 }
+.contenedor .boton span {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 60px;
+    margin-left: 10px;
+} */
 
-.hamburger input {
-    display: none;
-}
-
-.hamburger svg {
-    /* The size of the SVG defines the overall size */
-    height: 3em;
-    /* Define the transition for transforming the SVG */
-    transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.line {
-    fill: none;
-    stroke: #fff;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    stroke-width: 3;
-    /* Define the transition for transforming the Stroke */
-    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.line-top-bottom {
-    stroke-dasharray: 12 63;
-}
-
-.hamburger input:checked + svg {
-    transform: rotate(-45deg);
-}
-
-.hamburger input:checked + svg .line-top-bottom {
-    stroke-dasharray: 20 300;
-    stroke-dashoffset: -32.42;
-}
-.modal a {
-    outline: none; /* Elimina el borde */
-}
-
-.transparente {
-    width: 80px;
-    height: 80px;
-}
-
-.x {
-    position: absolute;
-    left: 0px;
-    font-size: 32px;
-}
+/* 
+'Courier New',
+'Lucida Sans' 
+*/
